fix: hidden dropdown and overflow of project listing on logs page

--- a/src/index.css
+++ b/src/index.css
@@ -425,6 +425,10 @@ tr.TableLoading td {
 
 }
 
+.FilterSection .SelectOptionsWrapper {
+  overflow-y: auto;
+}
+
 .ContentSection {
   display: flex;
   flex-direction: column;
